--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -1,42 +1,26 @@
-.foodCard:hover {
+.card:hover {
   width: 250px;
-  height: 300px;
+  height: 250px;
   box-shadow: 0px 1px 7px 3px gray;
   border-radius: 10px;
   border: none;
   cursor: pointer;
 }
-.foodCard {
+.card {
   display: inline-block;
-  width: 250px;
-  height: 300px;
   margin: 10px 10px;
+  width: 250px;
+  height: 250px;
   box-shadow: 0px 1px 7px 3px lightgray;
   border-radius: 10px;
 }
-.showPrice {
-  text-align: center;
-  font-size: 15px;
-  color: gray;
-}
-.originalPrice {
-  text-align: center;
-  font-size: 17px;
-  color: #000;
-}
-.foodItemImage {
+
+.categoryImage {
   text-align: center;
   width: 120px;
   height: 120px;
 }
-
-.addCart {
-  margin: 0 auto;
-  text-align: center;
-  margin: 15px;
-  padding: 0 10px;
-}
-.food-image-container {
+.image-container {
   text-align: center;
   margin: 5px auto;
 }
