--- a/src/components/FoodItemCard/FoodItemCard.css
+++ b/src/components/FoodItemCard/FoodItemCard.css
@@ -1,6 +1,6 @@
 .foodCard:hover {
   width: 250px;
-  height: 300px;
+  height: 350px;
   box-shadow: 0px 1px 7px 3px gray;
   border-radius: 10px;
   border: none;
@@ -9,10 +9,16 @@
 .foodCard {
   display: inline-block;
   width: 250px;
-  height: 300px;
+  height: 350px;
   margin: 10px 10px;
   box-shadow: 0px 1px 7px 3px lightgray;
   border-radius: 10px;
+}
+.quantity-container{
+  margin: 0 auto;
+  text-align: center;
+  margin: 15px;
+  padding: 0 10px;
 }
 .showPrice {
   text-align: center;
