--- a/src/components/FoodItemCard/FoodItemCard.css
+++ b/src/components/FoodItemCard/FoodItemCard.css
@@ -1,6 +1,8 @@
 .foodCard:hover {
-  width: 250px;
-  height: 350px;
+  max-width: 250px;
+  max-height: 350px;
+  min-width: 230px;
+  min-height: 330px;
   box-shadow: 0px 1px 7px 3px gray;
   border-radius: 10px;
   border: none;
@@ -8,13 +10,35 @@
 }
 .foodCard {
   display: inline-block;
-  width: 250px;
-  height: 350px;
+  max-width: 250px;
+  max-height: 350px;
+  min-width: 230px;
+  min-height: 330px;
   margin: 10px 10px;
   box-shadow: 0px 1px 7px 3px lightgray;
   border-radius: 10px;
 }
-.quantity-container{
+
+@media only screen and (max-width: 768px) {
+  .foodCard:hover {
+    width: 100%;
+    height: 200px;
+    box-shadow: 0px 1px 7px 3px gray;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+  }
+  .foodCard {
+    display: inline-block;
+    width: 50px;
+    height: 200px;
+    margin: 10px 10px;
+    box-shadow: 0px 1px 7px 3px lightgray;
+    border-radius: 10px;
+  }
+}
+
+.quantity-container {
   margin: 0 auto;
   text-align: center;
   margin: 15px;
