--- a/src/Shared/AdminNavbar/AdminNavbar.css
+++ b/src/Shared/AdminNavbar/AdminNavbar.css
@@ -1,4 +1,4 @@
-.ui.secondary.menu {
+/* .ui.secondary.menu {
   height: 60px !important;
   background-color: #008ecc;
 }
@@ -6,4 +6,15 @@
 .ui.menu .item {
   color: #fff !important;
   font-size: 16px;
+} */
+
+.navbar-container {
+  width: 100vw;
+  height: 80px;
+  background-color: red;
+  display: block;
+}
+
+.nav-item {
+  margin: 10px;
 }
