--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -43,3 +43,52 @@
   line-height: 30px;
   color: #fff;
 }
+
+@media screen and (max-width: 768px) {
+  .card:hover {
+    width: 80vw;
+    height: 250px;
+    box-shadow: 0px 1px 7px 3px gray;
+    border-radius: 10px;
+    border: none;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+  .card {
+    display: inline-block;
+    margin: 10px 10px;
+    width: 80vw;
+    height: 250px;
+    box-shadow: 0px 1px 7px 3px lightgray;
+    border-radius: 10px;
+  }
+
+  .categoryImage {
+    text-align: center;
+    width: 120px;
+    height: 120px;
+  }
+  .image-container {
+    text-align: center;
+    margin: 5px auto;
+  }
+  .title {
+    text-align: center;
+    font-size: 25px;
+    margin: 10px auto;
+    font-weight: 800;
+  }
+
+  .sub-title {
+    font-size: 15px;
+    font-weight: 300;
+    background-color: rgb(82, 82, 201);
+    width: 50%;
+    margin: 10px auto;
+    border-radius: 20px;
+    height: 30px;
+    justify-content: center;
+    line-height: 30px;
+    color: #fff;
+  }
+}
