--- a/src/components/FoodItemCard/FoodItemCard.css
+++ b/src/components/FoodItemCard/FoodItemCard.css
@@ -1,8 +1,6 @@
 .foodCard:hover {
-  max-width: 250px;
-  max-height: 350px;
-  min-width: 230px;
-  min-height: 330px;
+  width: 250px;
+  height: 350px;
   box-shadow: 0px 1px 7px 3px gray;
   border-radius: 10px;
   border: none;
@@ -10,32 +8,11 @@
 }
 .foodCard {
   display: inline-block;
-  max-width: 250px;
-  max-height: 350px;
-  min-width: 230px;
-  min-height: 330px;
+  width: 250px;
+  height: 350px;
   margin: 10px 10px;
   box-shadow: 0px 1px 7px 3px lightgray;
   border-radius: 10px;
-}
-
-@media only screen and (max-width: 768px) {
-  .foodCard:hover {
-    width: 100%;
-    height: 200px;
-    box-shadow: 0px 1px 7px 3px gray;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-  }
-  .foodCard {
-    display: inline-block;
-    width: 50px;
-    height: 200px;
-    margin: 10px 10px;
-    box-shadow: 0px 1px 7px 3px lightgray;
-    border-radius: 10px;
-  }
 }
 
 .quantity-container {
@@ -70,14 +47,14 @@
   text-align: center;
   margin: 5px auto;
 }
-.title {
+.food-title {
   text-align: center;
   font-size: 20px;
   margin: 10px auto;
   font-weight: 800;
 }
 
-.sub-title {
+/* .sub-title {
   font-size: 12px;
   font-weight: 300;
   background-color: rgb(82, 82, 201);
@@ -88,4 +65,76 @@
   justify-content: center;
   line-height: 30px;
   color: #fff;
+} */
+
+@media only screen and (max-width: 768px) {
+  .foodCard:hover {
+    width: 60vw;
+    height: 350px;
+    box-shadow: 0px 1px 7px 3px gray;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+  }
+  .foodCard {
+    display: inline-block;
+    width: 60vw;
+    height: 350px;
+    margin: 10px 10px;
+    box-shadow: 0px 1px 7px 3px lightgray;
+    border-radius: 10px;
+  }
+
+  .quantity-container {
+    margin: 0 auto;
+    text-align: center;
+    margin: 15px;
+    padding: 0 10px;
+  }
+  .showPrice {
+    text-align: center;
+    font-size: 17px;
+    color: gray;
+  }
+  .originalPrice {
+    text-align: center;
+    font-size: 24px;
+    line-height: 50px;
+    color: #000;
+  }
+  .foodItemImage {
+    text-align: center;
+    width: 120px;
+    height: 120px;
+  }
+
+  .addCart {
+    margin: 0 auto;
+    text-align: center;
+    margin: 40px auto;
+    padding: 0 10px;
+  }
+  .food-image-container {
+    text-align: center;
+    margin: 5px auto;
+  }
+  .food-title {
+    text-align: center;
+    font-size: 25px;
+    margin: 10px auto;
+    font-weight: 800;
+  }
+
+  /* .sub-title {
+    font-size: 12px;
+    font-weight: 300;
+    background-color: rgb(82, 82, 201);
+    width: 50%;
+    margin: 10px auto;
+    border-radius: 20px;
+    height: 30px;
+    justify-content: center;
+    line-height: 30px;
+    color: #fff;
+  } */
 }
