--- a/src/Shared/AdminNavbar/AdminNavbar.css
+++ b/src/Shared/AdminNavbar/AdminNavbar.css
@@ -1,20 +1,17 @@
-/* .ui.secondary.menu {
-  height: 60px !important;
-  background-color: #008ecc;
-}
-
-.ui.menu .item {
-  color: #fff !important;
-  font-size: 16px;
-} */
-
-.navbar-container {
-  width: 100vw;
-  height: 80px;
-  background-color: red;
-  display: block;
-}
-
-.nav-item {
+.nav-link {
   margin: 10px;
+  color: #fff !important;
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.navbar-brand {
+  margin: 10px;
+  color: #fff !important;
+  font-weight: 800;
+  font-size: 20px;
+}
+.navbar{
+  margin-bottom: 20px;
+  box-shadow: 0px 2px 5px 2px lightgray;
 }
