--- a/src/components/FoodItemCard/FoodItemCard.css
+++ b/src/components/FoodItemCard/FoodItemCard.css
@@ -1,3 +1,13 @@
+.foodCard {
+  display: inline-block;
+  width: 250px;
+  height: 350px;
+  padding: 0 3px;
+  margin: 10px 10px;
+  box-shadow: 0px 1px 7px 3px lightgray;
+  border-radius: 10px;
+}
+
 .foodCard:hover {
   width: 250px;
   height: 350px;
@@ -6,19 +16,16 @@
   border: none;
   cursor: pointer;
 }
-.foodCard {
-  display: inline-block;
-  width: 250px;
-  height: 350px;
-  margin: 10px 10px;
-  box-shadow: 0px 1px 7px 3px lightgray;
-  border-radius: 10px;
-}
 
 .quantity-container {
-  margin: 0 auto;
   text-align: center;
-  margin: 15px;
+  margin: 15px auto;
+  padding: 0 10px;
+}
+
+.addCart {
+  text-align: center;
+  margin: 15px auto;
   padding: 0 10px;
 }
 .showPrice {
@@ -29,6 +36,7 @@
 .originalPrice {
   text-align: center;
   font-size: 17px;
+  margin-top: 10px;
   color: #000;
 }
 .foodItemImage {
@@ -37,45 +45,19 @@
   height: 120px;
 }
 
-.addCart {
-  margin: 0 auto;
-  text-align: center;
-  margin: 15px;
-  padding: 0 10px;
-}
 .food-image-container {
   text-align: center;
   margin: 5px auto;
 }
 .food-title {
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
+  height: 40px;
   margin: 10px auto;
   font-weight: 800;
 }
 
-/* .sub-title {
-  font-size: 12px;
-  font-weight: 300;
-  background-color: rgb(82, 82, 201);
-  width: 50%;
-  margin: 10px auto;
-  border-radius: 20px;
-  height: 30px;
-  justify-content: center;
-  line-height: 30px;
-  color: #fff;
-} */
-
 @media only screen and (max-width: 768px) {
-  .foodCard:hover {
-    width: 60vw;
-    height: 350px;
-    box-shadow: 0px 1px 7px 3px gray;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-  }
   .foodCard {
     display: inline-block;
     width: 60vw;
@@ -84,22 +66,36 @@
     box-shadow: 0px 1px 7px 3px lightgray;
     border-radius: 10px;
   }
+  .foodCard:hover {
+    width: 60vw;
+    height: 350px;
+    box-shadow: 0px 1px 7px 3px gray;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+  }
 
   .quantity-container {
-    margin: 0 auto;
+    margin: 30px auto;
     text-align: center;
-    margin: 15px;
+    padding: 0 10px;
+  }
+
+  .addCart {
+    text-align: center;
+    margin: 30px auto;
     padding: 0 10px;
   }
   .showPrice {
     text-align: center;
     font-size: 17px;
+    margin: 15px 0;
     color: gray;
   }
   .originalPrice {
     text-align: center;
     font-size: 24px;
-    line-height: 50px;
+    line-height: 10px;
     color: #000;
   }
   .foodItemImage {
@@ -108,33 +104,15 @@
     height: 120px;
   }
 
-  .addCart {
-    margin: 0 auto;
-    text-align: center;
-    margin: 40px auto;
-    padding: 0 10px;
-  }
   .food-image-container {
     text-align: center;
     margin: 5px auto;
   }
   .food-title {
     text-align: center;
-    font-size: 25px;
+    font-size: 15px;
+    height: 30px;
     margin: 10px auto;
     font-weight: 800;
   }
-
-  /* .sub-title {
-    font-size: 12px;
-    font-weight: 300;
-    background-color: rgb(82, 82, 201);
-    width: 50%;
-    margin: 10px auto;
-    border-radius: 20px;
-    height: 30px;
-    justify-content: center;
-    line-height: 30px;
-    color: #fff;
-  } */
 }
