--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -5,6 +5,7 @@
   border-radius: 10px;
   border: none;
   cursor: pointer;
+  margin: 10px 10px;
 }
 .card {
   display: inline-block;
@@ -51,7 +52,7 @@
     box-shadow: 0px 1px 7px 3px gray;
     border-radius: 10px;
     border: none;
-    margin: 0 auto;
+    margin: 10px 10px;
     cursor: pointer;
   }
   .card {
