--- a/src/Shared/Navbar/Navbar.css
+++ b/src/Shared/Navbar/Navbar.css
@@ -1,9 +1,17 @@
-/* .ui.secondary.menu {
-  height: 60px !important;
-  background-color: #008ecc;
+.nav-link {
+  margin: 10px;
+  color: #fff !important;
+  font-weight: 800;
+  font-size: 20px;
 }
 
-.ui.menu .item {
+.navbar-brand {
+  margin: 10px;
   color: #fff !important;
-  font-size: 16px;
-} */
+  font-weight: 800;
+  font-size: 20px;
+}
+.navbar{
+  margin-bottom: 20px;
+  box-shadow: 0px 2px 5px 2px lightgray;
+}
