--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -77,4 +77,11 @@
   .item-price {
     font-size: 15px;
   }
+  .payment-container {
+  margin-top: 20px;
+  border-radius: 10px;
+  background-color: #fff;
+  padding: 5px;
+  box-shadow: 1px 2px 7px 2px lightgray;
+}
 }
