--- a/src/Shared/Navbar/Navbar.css
+++ b/src/Shared/Navbar/Navbar.css
@@ -1,17 +1,29 @@
 .nav-link {
-  margin: 10px;
-  color: #fff !important;
+  margin: 5px;
+  color: #000 !important;
   font-weight: 800;
   font-size: 20px;
 }
 
 .navbar-brand {
   margin: 10px;
-  color: #fff !important;
+  color: #000 !important;
   font-weight: 800;
   font-size: 20px;
 }
-.navbar{
+.navbar {
   margin-bottom: 20px;
   box-shadow: 0px 2px 5px 2px lightgray;
+}
+
+.nav-search-bar {
+  width: 600px;
+  border-radius: 20px !important;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-search-bar {
+    width: 90vw;
+    border-radius: 20px !important;
+  }
 }
