--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,21 @@
   height: 200px;
   margin-top: 200px;
   padding-top: 50px;
+  padding-bottom: 20px;
   font-size: 15px;
   text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-container {
+    background-color: lightgray;
+    color: #000;
+    width: 100vw;
+    height: 100%;
+    margin-top: 200px;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    font-size: 15px;
+    text-align: left;
+  }
 }
