--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,7 +9,9 @@
   font-size: 15px;
   text-align: left;
 }
-
+#map-container {
+  margin: -40px 0;
+}
 @media screen and (max-width: 768px) {
   .footer-container {
     background-color: lightgray;
@@ -21,5 +23,11 @@
     padding-bottom: 20px;
     font-size: 15px;
     text-align: left;
+  }
+  #map-container {
+    margin: 0 auto;
+    text-align: center;
+    align-content: center;
+    align-items: center;
   }
 }
