--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,7 +10,7 @@
   text-align: left;
 }
 #map-container {
-  margin: -40px 0;
+  margin-top: -40px;
 }
 @media screen and (max-width: 768px) {
   .footer-container {
